--- a/src/Payment.css
+++ b/src/Payment.css
@@ -1,35 +1,41 @@
 .payment {
-    background-color: white;
-  }
-   
-  .payment__container > h1 {
-    text-align: center;
-    padding: 10px;
-    font-weight: 400;
-    background-color: rgb(234, 237, 237);
-    border-bottom: 1px solid lightgray;
-  }
-   
-  .payment__container > h1 a {
-    text-decoration: none;
-  }
-   
-  .payment__section {
-    display: flex;
-    padding: 20px;
-    margin: 0 20px;
-    border-bottom: 1px solid lightgray;
-  }
-   
-  .payment__title {
-    flex: 0.2;
-  }
-   
-  .payment__address, .payment__items {
-    flex: 0.8;
-  }
+  background-color: white;
+}
+
+.payment__container{
+  overflow: hidden;
+  box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
+  transition: transform 2000ms ease-in;
+  cursor: pointer;
+}
   
-  .payment__address, .payment__items, .payment__details {
-    flex: 0.8;
-  }
+.payment__container > h1 {
+  text-align: center;
+  padding: 10px;
+  font-weight: 400;
+  background-color: rgb(234, 237, 237);
+  border-bottom: 1px solid lightgray;
+}
   
+.payment__container > h1 a {
+  text-decoration: none;
+}
+  
+.payment__section {
+  display: flex;
+  padding: 20px;
+  margin: 0 20px;
+  border-bottom: 1px solid lightgray;
+}
+  
+.payment__title {
+  flex: 0.2;
+}
+
+.payment__address, .payment__items, .payment__details {
+  flex: 0.8;
+}
+
+.pay__item:hover {
+  transform: scale(1.3);
+}
